// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`tests for <Input /> should match aria SnapShot 1`] = `
<div className="md-input-container">
  <Label className="md-input__label" htmlFor="1" label="test" theme="" />
  <div className="md-input__wrapper">
    <input className="md-input" onBlur={[Function (anonymous)]} onChange={[Function (anonymous)]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} onMouseDown={[Function (anonymous)]} tabIndex={0} type="text" value="" aria-describedby="ariaDescribedBy" aria-label="ariaLabel" id="1" name="test" />
  </div>
</div>
`;

exports[`tests for <Input /> should match clear SnapShot 1`] = `
<div className="md-input-container">
  <Label className="md-input__label" htmlFor="1" label="test" theme="" />
  <div className="md-input__wrapper">
    <input className="md-input" onBlur={[Function (anonymous)]} onChange={[Function (anonymous)]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} onMouseDown={[Function (anonymous)]} tabIndex={0} type="text" value="" id="1" name="test" />
  </div>
</div>
`;

exports[`tests for <Input /> should match number SnapShot 1`] = `
<div className="md-input-container">
  <Label className="md-input__label" htmlFor="1" label="test" theme="" />
  <div className="md-input__wrapper">
    <input className="md-input" onBlur={[Function (anonymous)]} onChange={[Function (anonymous)]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} onMouseDown={[Function (anonymous)]} tabIndex={0} type="number" value="" id="1" name="test" />
  </div>
</div>
`;

exports[`tests for <Input /> should match password SnapShot 1`] = `
<div className="md-input-container">
  <Label className="md-input__label" htmlFor="1" label="test" theme="" />
  <div className="md-input__wrapper">
    <input className="md-input" onBlur={[Function (anonymous)]} onChange={[Function (anonymous)]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} onMouseDown={[Function (anonymous)]} tabIndex={0} type="password" value="" id="1" name="test" />
  </div>
</div>
`;

exports[`tests for <Input /> should match text SnapShot 1`] = `
<div className="md-input-container">
  <Label className="md-input__label" htmlFor="1" label="test" theme="" />
  <div className="md-input__wrapper">
    <input className="md-input" onBlur={[Function (anonymous)]} onChange={[Function (anonymous)]} onFocus={[Function (anonymous)]} onKeyDown={[Function (anonymous)]} onMouseDown={[Function (anonymous)]} tabIndex={0} type="text" value="" id="1" name="test" />
  </div>
</div>
`;
